# nvcuda

./: LICENSE.md  README.md  bottles_setup.sh  meson.build  package-release.sh  proton_setup.sh  setup_nvcuda.sh
.github/workflows/: artifacts.yml
dlls/: meson.build
dlls/nvcuda/: encryption.c  encryption.h  function_mappings.c  function_mappings.h  internal.c  meson.build  nvcuda.c  nvcuda.rc  nvcuda.spec
dlls/nvcuda_fdll/: meson.build  nvcuda.rc
dlls/nvofapi/: meson.build  nvofapi.c  nvofapi.spec
include/: cuda.h  opticalflow.h
include/wine/: server_protocol.h
tests/: build-win64.txt  cudatest.c  meson.build
